--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
