--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "mdbreact": "^4.4.0",
     "moment": "^2.22.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
