--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "npm": "^6.1.0"
   }
 }
